src/styles/notion-block.module.css
.divider {
}

.caption {
  font-size: 0.9rem;
  color: var(--accents-3);
  text-align: center;
}

.image {
  margin: 0 auto;
}
.image > div:first-child {
  text-align: center;
}

.equation {
  overflow-x: scroll;
}

.code {
  display: block;
  width: 100%;
  padding: 1rem 0;
}
.code pre {
  display: block;
  overflow: auto;
  margin: 5px;
  padding: 0.8rem;
  background: #1a2638;
  font-size: 0.9rem;
  line-height: 1.2rem;
  border-radius: var(--radius);
}
.code pre code {
  color: var(--fg);
  padding: 0;
  background: #1a2638;
}
.gray {
  color: rgb(166, 165, 161);
  text-shadow: #555 1px 0 1px;
}
.brown {
  color: rgb(239, 102, 39);
  text-shadow: #555 1px 0 1px;
}
.orange {
  color: rgb(251, 132, 13);
  text-shadow: #555 1px 0 1px;
}
.yellow {
  color: rgb(246, 177, 56);
  text-shadow: #555 1px 0 1px;
}
.green {
  color: rgb(116, 227, 168);
  text-shadow: #555 1px 0 1px;
}
.blue {
  color: rgb(68, 173, 234);
  text-shadow: #555 1px 0 1px;
}
.purple {
  color: rgb(187, 129, 231);
  text-shadow: #555 1px 0 1px;
}
.pink {
  color: rgb(246, 133, 197);
  text-shadow: #555 1px 0 1px;
}
.red {
  color: rgb(250, 33, 26);
  text-shadow: #555 1px 0 1px;
}
.grayBackground {
  background: rgba(166, 165, 161, 0.339) !important;
  padding: 0 10px;
}
.brownBackground {
  background: rgba(187, 139, 41, 0.341) !important;
  padding: 0 10px;
}
.orangeBackground {
  background: rgba(251, 134, 0, 0.303) !important;
  padding: 0 10px;
}
.yellowBackground {
  background: rgba(246, 176, 56, 0.506) !important;
  padding: 0 10px;
}
.greenBackground {
  background: rgba(116, 227, 168, 0.37) !important;
  padding: 0 10px;
}
.blueBackground {
  background: rgba(68, 173, 234, 0.511) !important;
  padding: 0 10px;
}
.purpleBackground {
  background: rgba(187, 129, 231, 0.631) !important;
  padding: 0 10px;
}
.pinkBackground {
  background: rgba(251, 117, 193, 0.721) !important;
  padding: 0 10px;
}
.redBackground {
  background: rgba(255, 94, 88, 0.669) !important;
  padding: 0 10px;
}

.callout {
  display: flex;
  margin: 1rem auto;
  padding: 16px 12px;
  width: 100%;
  font-size: 0.95rem;
  line-height: 1.6rem;
  border-radius: 3px;
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
  background: rgba(110, 110, 110, 0.6);
  white-space: pre-wrap;
}
.callout div {
  margin: 0;
  line-height: 1.2rem;
}
.callout div:first-child {
  margin-right: 0.7rem;
}

.table {
  overflow-x: scroll;
}

.table th,
.table td {
  white-space: nowrap;
}

.columnList {
  display: flex;
  width: 100%;
  margin: 1rem auto;
  gap: 0 1rem;
}
.columnList > div {
  flex: 1 1 180px;
  width: 180px;
}
@media (max-width: 640px) {
  .columnList {
    display: block;
  }
  .columnList > div {
    width: 100%;
  }
}

.toDo {
  color: #222;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.8rem;
  padding-inline-start: 1rem;
}
.toDo > div {
}
.toDo > div > input {
}

.bookmark {
  display: flex;
  overflow: hidden;
  width: 100%;
  max-width: 100%;
  font-size: 0.9rem;
}
.bookmark > a {
  width: 100%;
  box-sizing: border-box;
  text-decoration: none;
  border: 1px solid rgba(126, 120, 102, 0.552);
  border-radius: 3px;
  display: flex;
  overflow: hidden;
  user-select: none;
}
.bookmark > a > div:first-child {
  flex: 4 1 180px;
  padding: 12px 14px 14px;
  overflow: hidden;
  text-align: left;
  color: var(--fg);
}
.bookmark > a > div:first-child > div:first-child {
  font-size: 14px;
  line-height: 20px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  min-height: 24px;
  margin-bottom: 2px;
}
.bookmark > a > div:first-child > div:nth-child(2) {
  font-size: 12px;
  line-height: 16px;
  opacity: 0.8;
  height: 32px;
  overflow: hidden;
}
.bookmark > a > div:first-child > div:last-child {
  display: flex;
  margin-top: 6px;
}
.bookmark > a > div:first-child > div:last-child > div:first-child {
  width: 16px;
  height: 16px;
  min-width: 16px;
  margin-right: 6px;
}
.bookmark > a > div:first-child > div:last-child > div:first-child > img {
  max-width: 100%;
  display: inline-block;
}
.bookmark > a > div:first-child > div:last-child > div:last-child {
  font-size: 12px;
  line-height: 16px;
  color: var(--fg);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.bookmark > a > div:last-child {
  flex: 1 1 180px;
  position: relative;
}
@media (max-width: 640px) {
  .bookmark > a > div:last-child {
    display: none;
  }
}
.bookmark > a > div:last-child > img {
  position: absolute !important;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.toggle {
}

.toggle > summary {
  cursor: pointer;
}

.toggle > div {
  margin-left: 1em;
}

.tweetEmbed {
  width: 100%;
  max-width: 600px;
  margin: auto;
}
.tweetEmbed div:first-child div:first-child {
  margin: auto;
}
.video .youtube {
  position: relative;
  width: 100%;
  height: 0;
  padding-top: 56.25%;
}
.video .youtube :first-child {
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

